--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
             <div class="tag-container col-lg-7">
                 <div class="tag-block">
-                    audiosearch is a simple way to find new music.
+                    a simple way to find new music.
                 </div>
             </div>
         </div><!--END header-->
