--- a/templates/result.html
+++ b/templates/result.html
@@ -37,7 +37,7 @@
 
             <div class="tag-container col-lg-7">
                 <div class="tag-block">
-                    audiosearch is a simple way to find new music.
+                    a simple way to find new music.
                 </div>
             </div>
         </div><!--END header-->
@@ -94,7 +94,7 @@
         <div class="content-h-separator row"></div>
 
         <!--dual columns, print if we have results-->
-        {% if display == True %}
+        {% if display == 1 %}
             <div class="row center">
                 <!--artist block-->
                 <div class="col-lg-5 content-box double-col">
