--- a/templates/song.html
+++ b/templates/song.html
@@ -39,7 +39,7 @@
 
             <div class="tag-container col-lg-7">
                 <div class="tag-block">
-                    audiosearch is a simple way to find new music.
+                    a simple way to find new music.
                 </div>
             </div>
         </div><!--END header-->
@@ -127,8 +127,9 @@
                     {% if similar_songs %}
                     <ul>
                         {% for s in similar_songs %}
-                            <li><a href = "{% url 'home.views.song_info' %}?q={{ s.id.split|join:'+' }}" > {{ s }}</a></li>
-                            <br />
+                            <li>
+                                <a href = "{% url 'home.views.song_info' %}?q={{ s.id.split|join:'+' }}" > {{ s }}</a>
+                            </li>
                         {% endfor %}
                     </ul>
                     {% endif %}
@@ -143,8 +144,8 @@
                     {% if similar_artists %}
                     <ul>
                         {% for a in similar_artists %}
-                                {{ forloop.counter }}.  
-                                <a href = "{% url 'home.views.artist_info' %}?q={{ a.id.split|join:'+' }}" > {{ a }}</a>
+                            {{ forloop.counter }}.  
+                            <a href = "{% url 'home.views.artist_info' %}?q={{ a.id.split|join:'+' }}" > {{ a }}</a>
                             <br />
                         {% endfor %}
                     </ul>
