--- a/templates/trending.html
+++ b/templates/trending.html
@@ -4,7 +4,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<!-- need to give credit for the font...-->
+    <!-- need to give credit for the font...-->
+
+    <!--Google analytics-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-51583732-1', 'audiosearch.net');
+      ga('send', 'pageview');
+
+    </script><!--END analytics-->
+
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
    
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
