--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -185,17 +185,22 @@ a:active {
 }
 
 #artist-image-container{
-    max-height: 100%;
-    max-width: 100%;
+    /*max-height: 100%;
+    max-width: 100%;*/
+    /*position: absolute;
+    right: 10px;*/
+    float: right;
 }
 #artist-image {
-    height: 200px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    /*height: 200px;
     width: 200px;
     float:right;
     overflow: hidden;
     border-style: solid;
     border-width: 1px;
-    border-color: white;
+    border-color: white;*/
 }
 
 .trending-image-container {
