--- a/templates/artist.html
+++ b/templates/artist.html
@@ -30,132 +30,106 @@
 <body>
 
 <div class="container">
+    <!--header block-->
+    <div id="title-box" class="row">
 
-    <!--left column-->
-    <div class="col-lg-1"></div>
+        <!--title block-->
+        <div class="search-container col-lg-5">
+            <img src="{{ STATIC_URL }}img/title.png" class="title-img-container">
 
-    <!--main column-->
-    <div class="content-main-col" class="col-lg-10">
+            <form action="/search/" method="GET">
+                <input class="search-bar" type="text" name="q">
+            </form>
+        </div><!--END title-->
 
-        <!--header block-->
-        <div class="title-box row">
-
-            <!--title block-->
-            <div class="search-container col-lg-5">
-                <img src="{{ STATIC_URL }}img/title.png" class="title-img-container">
-
-                <form action="/search/" method="GET">
-                    <input class="search-bar" type="text" name="q">
-                </form>
-            </div><!--END title-->
-
-            <div class="tag-container col-lg-7">
-                <div class="tag-block">
-                    a simple way to find new music.
-                </div>
-            </div>
-        </div><!--END header-->
-
-        <div class="content-h-separator row"></div>
-
-        <!--nav buttons-->
-        <div class="row center">
-            <div class="nav-button col-lg-2">
-                <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
-                <div class="box-footer">
-                    home
-                </div>
-            </div>
-
-            <div class="content-w-separator col-lg-1"></div>
-
-            <div class="nav-button col-lg-2">
-                <a href="{% url 'home.views.trending' %}"><span class="nav-link"></span></a>
-                <div class="box-footer">
-                    trending
-                </div>
-            </div>
-
-            <div class="content-w-separator col-lg-1"></div>
-
-            <div class="nav-button col-lg-2">
-                <a href="{% url 'home.views.artist_info' %}?q={{ featured.split|join:'+' }}"><span class="nav-link"></span></a>
-                <div class="box-footer">
-                    featured
-                </div>
-            </div>
-
-            <div class="content-w-separator col-lg-1"></div>
-
-            <div class="nav-button col-lg-2">
-                <a href="{% url 'home.views.compare' %}"><span class="nav-link"></span></a>
-                <div class="box-footer">
-                    compare
-                </div>
-            </div>
-
-            <div class="content-w-separator col-lg-1"></div>
-
-            <div class="nav-button col-lg-2">
-                <a href="{% url 'home.views.about' %}"><span class="nav-link"></span></a>
-                <div class="box-footer">
-                    about
-                </div>
+        <div class="tag-container col-lg-7">
+            <div class="tag-block">
+                a simple way to find new music.
             </div>
         </div>
-        <!--END nav-->
+    </div><!--END header-->
 
-        <div class="content-h-separator row"></div>
+    <!--nav buttons-->
+    <div id="nav-bar" class="row">
+        <div class="col-lg-3 nav-button">
+            <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
+            <div class="box-footer">
+                home
+            </div>
+        </div>
+
+        <div class="col-lg-3 nav-button">
+            <a href="{% url 'home.views.trending' %}"><span class="nav-link"></span></a>
+            <div class="box-footer">
+                trending
+            </div>
+        </div>
+
+        <div class="col-lg-3 nav-button">
+            <a href="{% url 'home.views.compare' %}"><span class="nav-link"></span></a>
+            <div class="box-footer">
+                compare
+            </div>
+        </div>
+
+        <div class="col-lg-3 nav-button">
+            <a href="{% url 'home.views.about' %}"><span class="nav-link"></span></a>
+            <div class="box-footer">
+                about
+            </div>
+        </div>
+    </div><!--END nav-->
+
+    <div class="row">
 
         {% if display == True %}
-
             <!--artist summary-->
-            <div class="row center">
-                <div class="content-box">
-                    <div class="title-text">
-                        <div id="artist-image-container"> 
-                            {% if image %}
-                                <a href="{{ image }}"><img src="{{ image }}" id="artist-image"></a>
-                            {% endif %}
-                        </div>
-
-                        {{ name }} - <span class="uline" title="A representation of how popular an artist or song is.">{{ hot|to_percent }}%</span>
-                        
-                        {% if twitter %}<br /> @{{ twitter }}{% endif %}
-                        <br />
-                        {% if terms %}
-                            <div class="ital">
-                                {% for t in terms %}
-                                    {{ t }}
-                                {% endfor %}
-                            </div>
+            <div class="col-lg-8 content-box">
+            
+                <div class="title-text">
+                    <div id="artist-image-container"> 
+                        {% if image %}
+                            <a href="{{ image }}"><img src="{{ image }}" id="artist-image"></a>
                         {% endif %}
                     </div>
+
+                    {{ name }} - <span class="uline" title="A representation of how popular an artist or song is.">{{ hot|to_percent }}%</span>
+                    
+                    {% if twitter %}<br /> @{{ twitter }}{% endif %}
                     <br />
-
-                    <!--bio-->
-                    {% if short_bio %}
-                        <div id="short-bio-block" class="indent">
-                            {{ short_bio|linebreaks }}
+                    {% if terms %}
+                        <div class="ital">
+                            {% for t in terms %}
+                                {{ t }}
+                            {% endfor %}
                         </div>
+                    {% endif %}
+                </div>
+                <br />
 
-                        <div id="long-bio-block" class="indent">
-                            {{ long_bio|linebreaks }}
-                        </div>
+                <!--bio-->
+                {% if short_bio %}
+                    <span id="short-bio-block" class="indent">
+                        {{ short_bio|linebreaks }}
+                    </span>
 
-                        <span id="bio-toggle" title="Expand this biography.">more</span>
-                    {% endif %}<!--END bio-->
-            
-                    <div class="clear"></div>
-                </div>  
+                    <span id="long-bio-block" class="indent">
+                        {{ long_bio|linebreaks }}
+                    </span>    
+                    
+                    <span id="bio-toggle" title="Expand this biography.">more</span>
+                {% endif %}<!--END bio-->
+
+                <div class="clear"></div>
+                
             </div><!--END artist summary-->
 
-            <div class="content-h-separator row"></div>
-
-            <div class="row center">
-
+            <!--songs and similar-->
+            <div class="col-lg-3 no-padding pull-right">
+                
                 <!--songs-->
-                <div class="col-lg-5 content-box double-col">
+                <div class="row content-box">
+           
                     <div class="subtitle-text">Top Songs</div>
                     <ul>
                     {% for s in songs %}
@@ -170,10 +144,9 @@
                     </ul>
                 </div><!--END song block-->
 
-                <div class="content-w-separator col-lg-1"></div>
-
-                <div class="col-lg-5 content-box double-col">
-                     <div class="subtitle-text">Similar Artists</div>
+                <!--similar-->
+                <div class="row content-box">
+                    <div class="subtitle-text">Similar Artists</div>
                     <ul>
                     {% if artists %}
                         {% for a in artists %}
@@ -185,23 +158,18 @@
                         {% endfor %}
                     {% endif %}
                     </ul>
-                </div><!--END artist block-->
-            </div><!--END dual columns-->
-        {% else %}
-
-        <div class="row center">
-            <div class="content-box">
-                <div class ="subtitle-text ital">
-                    We could not find information on this artist.  Try again with a different name.
-                </div>
-            </div>
+                </div><!--END similar-->
+            </div><!--END songs and similar-->
         </div>
 
-        {% endif %}
-    </div><!--END main-->
-
-    <!--right column-->
-    <div class="col-lg-1"></div>
+    <!--no info-->
+    {% else %}
+        <div class="content-box">
+            <div class ="subtitle-text ital">
+                We could not find information on this artist.  Try again with a different name.
+            </div>
+        </div>
+    {% endif %}
 </div>
 
 <script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
